--- a/index.html
+++ b/index.html
@@ -8,60 +8,73 @@
   <body>
     <header>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="#">WebStudio</a></li>
-          <li><a href="#">Studio</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contacts</a></li>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
         <address>
-          <a href="mailto:info@devstudio.com">Email: info@devstudio.com</a>
-          <a href="tel:+110001111111">Phone: +11 (000) 111-11-11</a>
+          <ul>
+          <li><a href="mailto:info@devstudio.com">Email: info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">Phone: +11 (000) 111-11-11</a></li>
+          </ul>
         </address>
       </nav>
     </header>
     <main>
         <section>
       <h1>
-        Effective Solutions <br />
+        Effective Solutions
         for Your Business
       </h1>
       <button type="button">Order Service</button>
     </section>
     <section>
-      <h3>Strategy</h3>
-      <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
-      <h3>Punctuality</h3>
-      <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-      <h3>Diligence</h3>
-      <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
-      <h3>Technologies</h3>
-      <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+      <ul>
+      <h2>About Our Work</h2>
+      <li>
+        <h3>Strategy</h3>
+        <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+      </li>
+      <li>
+        <h3>Punctuality</h3>
+        <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+      </li>
+      <li>
+        <h3>Diligence</h3 >
+        <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
+      </li>
+      <li>
+        <h3>Technologies</h3>
+        <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+      </li>
+    </ul>
     </section>
     <section>
       <h2>Our Team</h2>
       <ul>
       <li>
-        <img src="images/img-3.png" alt="Mark Guerrero" width="264">
-        <p>Mark Guerrero <br>Product Designer</p>
+        <img src="./images/img-3.png" alt="Mark Guerrero" width="264">
+        <h3>Mark Guerrero <br>Product Designer</h3>
       </li> 
       <li>
-        <img src="images/img-2.png" alt="Tom Ford" width="264">
-        <p>Tom Ford <br>Frontend Developer</p>
+        <img src="./images/img-2.png" alt="Tom Ford" width="264">
+        <h3>Tom Ford <br>Frontend Developer</h3>
       </li>
       <li>
-        <img src="images/img-1.png" alt="Camila Garcia" width="264">
-        <p>Camila Garcia <br>Marketing</p>
+        <img src="./images/img-1.png" alt="Camila Garcia" width="264">
+        <h3>Camila Garcia <br>Marketing</h3>
       </li>
       <li>
-        <img src="images/img.png" alt="Daniel Wilson" width="264">
-        <p>Daniel Wilson <br>UI Designer</p>
+        <img src="./images/img.png" alt="Daniel Wilson" width="264">
+        <h3>Daniel Wilson <br>UI Designer</h3>
       </li>
       </ul>   
     </section>
     </main>
     <footer>
-        <a href="#">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
   </body>
