--- a/index.html
+++ b/index.html
@@ -56,19 +56,23 @@
       <ul>
       <li>
         <img src="./images/img-3.png" alt="Mark Guerrero" width="264">
-        <h3>Mark Guerrero <br>Product Designer</h3>
+        <h3>Mark Guerrero</h3>
+        <p>Product Designer</p>
       </li> 
       <li>
         <img src="./images/img-2.png" alt="Tom Ford" width="264">
-        <h3>Tom Ford <br>Frontend Developer</h3>
+        <h3>Tom Ford</h3>
+        <p>Frontend Developer</p>
       </li>
       <li>
         <img src="./images/img-1.png" alt="Camila Garcia" width="264">
-        <h3>Camila Garcia <br>Marketing</h3>
+        <h3>Camila Garcia</h3>
+        <p>Marketing</p>
       </li>
       <li>
         <img src="./images/img.png" alt="Daniel Wilson" width="264">
-        <h3>Daniel Wilson <br>UI Designer</h3>
+        <h3>Daniel Wilson</h3>
+        <p>UI Designer</p>
       </li>
       </ul>   
     </section>
