--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       </nav>
       <address>
           <ul>
-          <li><a href="mailto:info@devstudio.com">Email: info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">Phone: +11 (000) 111-11-11</a></li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
           </ul>
         </address>
     </header>
@@ -31,8 +31,8 @@
       <button type="button">Order Service</button>
     </section>
     <section>
-      <ul>
       <h2>About Our Work</h2>
+      <ul>
       <li>
         <h3>Strategy</h3>
         <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
@@ -55,22 +55,22 @@
       <h2>Our Team</h2>
       <ul>
       <li>
-        <img src="./images/img-3.png" alt="Mark Guerrero" width="264">
+        <img src="./images/img4.jpg" alt="Mark Guerrero" width="264">
         <h3>Mark Guerrero</h3>
         <p>Product Designer</p>
       </li> 
       <li>
-        <img src="./images/img-2.png" alt="Tom Ford" width="264">
+        <img src="./images/img3.jpg" alt="Tom Ford" width="264">
         <h3>Tom Ford</h3>
         <p>Frontend Developer</p>
       </li>
       <li>
-        <img src="./images/img-1.png" alt="Camila Garcia" width="264">
+        <img src="./images/img-1.jpg" alt="Camila Garcia" width="264">
         <h3>Camila Garcia</h3>
         <p>Marketing</p>
       </li>
       <li>
-        <img src="./images/img.png" alt="Daniel Wilson" width="264">
+        <img src="./images/img2.jpg" alt="Daniel Wilson" width="264">
         <h3>Daniel Wilson</h3>
         <p>UI Designer</p>
       </li>
